--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 3002",
+    "dev": "next dev --port 4002",
     "build": "next build",
-    "start": "next start",
+    "start": "next start --port 4002",
     "lint": "next lint"
   },
   "dependencies": {
