--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "axeos-public",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "private": true,
   "scripts": {
     "dev": "next dev --port 4002",
@@ -18,7 +18,8 @@
     "formidable": "^2.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.32.0"
   },
   "devDependencies": {
     "@types/formidable": "^2.0.5",
